# voice-landscape

./: .env.default  .gitignore  Dockerfile  LICENSE  README-it.md  README.md  conftest.py  docker-compose.yml  entrypoint.sh  makefile  manage.py  package-lock.json  package.json  pyproject.toml  requirements.dev.txt  requirements.in  requirements.ini  requirements.lab.txt  requirements.txt  setup.cfg  setup.py
.docker/: Dockerfile.app.example  docker-compose.yml  docker.md
admin/: asgi.py  settings.py  urls.py  wsgi.py
apps/api/: views.py
apps/geo/: utils.py
apps/map/: apps.py
apps/showcase/: apps.py  urls.py  views.py
apps/showcase/static/css/showcase/: main.scss
apps/showcase/static/showcase/css/: scaling.scss
apps/showcase/templates/showcase/: showcase.html
apps/speech/: apps.py  errors.py  forms.py  views.py
apps/speech/static/js/speech/: medias.js  record.js  speech.js
apps/speech/static/speech/js/: medias.js  record.js  speech.js
apps/speech/tests/: test_views.py
apps/website/: admin.py  apps.py  fields.py  forms.py  models.py  signals.py  urls.py  views.py
apps/website/fixtures/website/: demo.yaml  demo_places_202109.yaml  demo_places_202303.yaml  demo_places_202309.yaml
apps/website/migrations/: 0002_place_wordfrequency_and_more.py  0005_alter_wordfrequency_place.py  0006_landscape.py  0007_landscape_reload_time.py  0007_word_alter_wordfrequency_word.py  0008_landscape_provider.py  0008_share_landscape.py  0009_alter_share_landscape.py  0009_landscape_default.py  0010_landscape_description_alter_landscape_slug_and_more.py  0010_leafletprovider_and_more.py  0011_landscape_zoom_initial_landscape_zoom_max_and_more.py  0011_logo_alter_wordfrequency_options_landscape_domain_and_more.py  0012_landscape_enabled_alter_landscape_domain.py  0012_landscape_zoom_min_zoom_initial_and_more.py  0013_share_place_share_words_alter_share_timestamp.py  0013_share_words.py  0014_share_place.py  0015_alter_share_timestamp.py
apps/website/scripts/: add_demo_shares.py  benchmark.py  init_demo.py  recalculate_shares.py
apps/website/static/css/website/: main.scss  map.scss  share.scss
apps/website/static/js/website/: map.js  share.js
apps/website/static/website/css/: _palette.scss  main.scss  map.scss  share.scss
apps/website/static/website/js/: map.js  record.js  share.js
apps/website/templates/: _base.html  _footer.html  _scripts.html  map.html  share.html  showcase.html
apps/website/templates/website/: history.html  map.html  share.html
apps/website/tests/: test_views.py
apps/website/tests/fixtures/: landscapes.json
apps/website/tools/: blacklist.py
demo/: __init__.py  __main__.py  app.py  asgi.py  cases.py  constants.py  geo.py  handlers.py  models.py  presenters.py  repos.py  services.py
demo/geo/: __init__.py
demo/system/: structures.py  types.py
demo/templates/: _base.html  _header.html  _scripts.html  legacy_map.html  map.html  share.html
docs/: code.md  docker.md  nginx.md  postgres.md  roadmap.md
nginx/: nginx.conf
notebooks/: access_api.ipynb  access_django.ipynb  data.ipynb  shares-analysis.ipynb
scripts/: compile_scss.py  generate_secret_key.py  show_settings.py
speech/: apps.py  views.py
static/css/: _fonts.scss  _palette.scss  alerts.scss  fonts.scss  main.scss  palette.scss
static/js/: alerts.js
system/: docker-compose.yml  gunicorn.service  nginx.conf  nginx.yunohost.conf  voice-landscape.service
templates/: 404.html  _alerts.html  _base.html  _footer.html  _header.html  _scripts.html  base.html  index.html  info.html  map.html  privacy.html  share.html  showcase.html
tests/: test_audio_processing.py  test_load_samples.py
voices/: api.py  app.py  asgi.py  cases.py  config.py  constants.py  geo.py  handlers.py  models.py  presenters.py  repos.py  services.py  settings.py  urls.py  views.py  wsgi.py
voices/api/: serializers.py  urls.py  views.py
voices/db/: admin.py  database.py  engines.py  models.py
voices/geo/: utils.py
voices/speech/: apps.py  urls.py
voices/system/: structures.py  types.py  web.py
voices/website/: admin.py  apps.py  loggers.py  models.py
voices/website/migrations/: 0005_alter_wordfrequency_place.py
voices/website/scripts/: init_demo.py
voices/website/templates/: _alerts.html  _base.html
website/: _old.py  admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py  voices.py
website/migrations/: 0001_initial.py  0002_landscape.py  0002_place_wordfrequency_and_more.py  0003_alter_place_slug.py  0003_landscape_title_alter_landscape_slug.py  0004_alter_wordfrequency_frequency.py  0004_place_wordfrequency.py  0005_alter_wordfrequency_options.py
website/scripts/: generate_secret_key.py  init_demo.py
website/static/website/css/: main.scss
website/static/website/js/: map.js  record.js
website/templates/: _base.html  _footer.html  _header.html  _scripts.html  home.html  map.html  privacy.html  share.html  showcase.html
www/: main.css
www/js/: map.js  record.js
