[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools.packages.find]
include = ["admin", "voices"]

[project]
name = "voice-landscape"
version = "0.5.0"
requires-python = ">=3.10"
dependencies = [
    "django>=4",
    "djangorestframework",
    "django-compressor",
    "django-cors-headers",
    "django-extensions",
    "django-jazzmin",
    "django-qr-code",
    "django-sass-processor",
    "dj-database-url",
    "gunicorn",
    "libsass",
    "loguru",
    "openai-whisper",
    "pydub",
    "psycopg2",
    "python-decouple",
    "soundfile",
    "spacy",
    "SpeechRecognition",
    "tqdm",
]

[project.optional-dependencies]
dev = ["black", "ipython", "isort", "pip-tools", "pytest-django"]
lab = [
    "ipympl",
    "ipywidgets",
    "bokeh",
    "jupyterlab",
    "jupyter-bokeh",
    "matplotlib",
    "seaborn",
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "admin.settings"