[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools.packages.find]
include = ["admin", "voices"]

[project]
name = "voice-landscape"
version = "0.8.4"
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
    "django>=4",
    "djangorestframework",
    "django-cors-headers",
    "django-extensions",
    "django-jazzmin",
    "django-static-precompiler",
    "dj-database-url",
    "gunicorn",
    "lesscpy",
    "loguru",
    "openai-whisper",
    "Pillow",
    "pydub",
    "PyYAML",
    "psycopg2",
    "python-decouple",
    "soundfile",
    "spacy",
    "SpeechRecognition",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "black", 
    "ipython", 
    "isort", 
    "pip-tools", 
    "pytest-django", 
]
lab = [
    "ipympl",
    "ipywidgets",
    "bokeh",
    "jupyterlab",
    "jupyter-bokeh",
    "matplotlib",
    "seaborn",
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "admin.settings"
python_files = "tests.py test_*.py *_tests.py"
filterwarnings = [
    "ignore::django.utils.deprecation.RemovedInDjango50Warning",
    "ignore::django.utils.deprecation.RemovedInDjango51Warning",
    "ignore::DeprecationWarning",
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
    "ignore::numba.core.errors.NumbaDeprecationWarning"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = [
    "-m not slow"
]
