# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = demo
version = 0.0.0
project_urls =
    Source code = https://github.com/eulersrl/dima-botticino
platforms = linux


[options]
zip_safe = False
include_package_data = True
python_requires = >=3.9.0
install_requires =
    loguru
    spacy
    starlette
    uvicorn
    wordcloud

[options.packages.find]
exclude =
    tests

[options.extras_require]
testing =
    pytest
develop =
    pip
    setuptools

[aliases]
build = bdist_wheel
release = build upload