# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = demo
version = 0.1.0
project_urls =
    Source code = https://github.com/archiviofontiorali/afor-paesaggi-di-voci
platforms = linux


[options]
zip_safe = False
include_package_data = True
python_requires = >=3.8.0
install_requires =
    databases
    databases[sqlite]
    databases[postgresql]
    dataclasses-json
    geopy
    jinja2
    loguru
    pydub
    python-multipart
    spacy
    SpeechRecognition
    starlette
    uvicorn

[options.packages.find]
exclude =
    tests

[options.extras_require]
production =
    gunicorn
testing =
    pytest
develop =
    pip
    setuptools

[aliases]
build = bdist_wheel
release = build upload